Updated Connection URL
